Updated swagger specification and added product category api
